Bound async flush epochs for HFT latency